<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageCard"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/image_card"
                android:scaleType="centerCrop"
                android:transitionName="imageCard" />

            <ImageView
                android:id="@+id/shadowBottom"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignBottom="@id/imageCard"
                android:contentDescription="@string/sahdow_bottom"
                android:src="@drawable/bottom_shadow" />

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_below="@id/imageCard"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_white"
                android:contentDescription="@string/like_button"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:visibility="invisible" />

            <FrameLayout
                android:id="@+id/dateFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageCard"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp"
                android:background="@drawable/round_white"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_01_january_1990" />
            </FrameLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageCard"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title"
                android:textColor="@color/colorTextTitle"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>