<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/main_pic"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:transitionName="imageCard"
                app:layout_collapseMode="parallax"
                tools:ignore="UnusedAttribute" />

            <RelativeLayout
                android:id="@+id/headerContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:contentDescription="@string/top_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_shadow" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/bottom_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bottom_shadow" />

                <ImageView
                    android:id="@+id/likeButton"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_white"
                    android:contentDescription="@string/like_button"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    android:visibility="invisible" />

                <FrameLayout
                    android:id="@+id/date_behavior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/round_white"
                    android:clickable="false"
                    android:padding="5dp"
                    app:behavior_autoHide="true"
                    app:layout_anchorGravity="left|end|bottom">


                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/date"
                        android:src="@drawable/ic_date" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="27dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/_01_january_1990"
                        android:textColor="#606060" />
                </FrameLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:id="@+id/title_appbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:orientation="vertical">

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/titleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/title_of_news"
                android:textColor="@color/colorTextTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/summary_of_news"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/titleDetails" />

            <Button
                android:id="@+id/readMoreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="readMore"
                android:text="@string/read_more"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/frameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:layout_constraintBottom_toTopOf="@id/relatedNewsLay"
                app:layout_constraintTop_toBottomOf="@id/readMoreBtn">

            </com.google.android.flexbox.FlexboxLayout>

            <LinearLayout
                android:id="@+id/relatedNewsLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/frameButton">

                <TextView
                    android:id="@+id/relatedNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/related"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>